# ns3-docker

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
examples/: batch-example.py  wifi-simple.cc
scratch/: CMakeLists.txt  batch-example.py
scripts/: buildx-push  docker-push  ns3  ns3-batch  ns3-build  ns3-clean  ns3-shell  ns3-watch
